# TemplateCommand

./: .gitignore  Cargo.toml  DOCUMENTATION.md  KNOWN_BUGS.md  LICENSE.md  README.md  ROADMAP.md  ROADMAP_AND_KNOWN_BUGS.md  template_command.sublime-project  template_command.sublime-workspace  tt.sublime-workspace  update_version.bat
docs/: build_and_install.md  command_line.md  getting_started.md  home.md  template_files.md
editor_plugins/: installation.md
editor_plugins/sublime_plugin/: Side Bar.sublime-menu  install_instructions.md  side_bar_base.json  template_touch.py
examples/: tt.js  tt.pri  tt.singleton.h
integration_testing/: run_mac_linux_integration_tests.sh
integration_testing/integration_templates/: template.define_guard_test.h
src/: command_line_documentation.rs  config.rs  enumeration_list.rs  file_context.rs  file_harvester.rs  file_manip.rs  formatter.rs  logger.rs  main.rs  output_file_description.rs  parser.rs  platform_list.rs  platform_specific.rs  program_args.rs  replacement_token.rs  symbol_replacer.rs  template_file_list.rs  token.rs  util.rs
template_examples/: template.builder.h  template.cpp  template.qmldir  template.rs  template.singleton.h  tt.h
