[package]
name = "tt"
version = "1.3.3"
authors = ["Austin <ahaskell@carthage.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
regex = "1.5.4"
chrono = "0.4.19"
whoami = "1.2.0"
serde = {version = "1.0.123", features = ["derive"]}
serde_json = "1.0.62"
log = "0.4.16"
env_logger = "0.9.0"
colored = "2.0.0"